Made kw search page work again